<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pemf.vet.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/navigation_session_control"
        android:name="com.pemf.vet.ui.sessioncontrol.SessionControlFragment"
        android:label="@string/session_control" />

    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.pemf.vet.ui.monitor.MonitorFragment"
        android:label="@string/monitor" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pemf.vet.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>

